clean up mess from failed attempts to link in authlib